--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -96,12 +96,12 @@
             </div>
             <div class="portfolio__images">
                 <div class="side-left">
-                    <img class="h1" src="./img/portfolio_img-1.svg" alt="portfolio img-1">
+                    <img class="portfolio-images" src="./img/portfolio_img-1.svg" alt="portfolio img-1">
                     <img src="./img/portfolio_img-2.svg" alt="portfolio img-2">
 
                 </div>
                 <div class="side-right">
-                    <img class="h1" src="./img/portfolio_img-3.svg" alt="portfolio img-3">
+                    <img class="portfolio-images" src="./img/portfolio_img-3.svg" alt="portfolio img-3">
                     <img src="./img/portfolio_img-4.svg" alt="portfolio img-4">
                 </div>
             </div>
