--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -19,13 +19,36 @@
         <div class="hero-block">
             <div class="header">
                 <div class="header__navigation">
+                    <div class="header__navigation-title">
+                        <span>Portofolio</span>
+                    </div>
+                    <ul class="menu">
+                        <li>
+                            <a href="">Home</a>
+                        </li>
+                        <li>
+                            <a href="">About</a>
+                        </li>
+                        <li>
+                            <a href="">Skills</a>
+                        </li>
+                        <li>
+                            <a href="">Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="">Contact</a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- <div class="header__navigation">
                     <a href="">
                         <img src="./img/navigation.svg" alt="navigation">
                     </a>
-                </div>
-                <div class="header__title">
-                    <span>Portofolio</span>
-                </div>
+                </div> -->
+
             </div>
             <div class="hero-block__information">
                 <div class="hero-block__information__main-title">
